// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test Transform > Test arrow bindings > should bind arrows to existing shapes when start / end provided with ids 1`] = `
{
  "angle": 0,
  "backgroundColor": "#d8f5a2",
  "boundElements": [
    {
      "id": "z3CgMpo52iGH_Yx1OtKKa",
      "type": "arrow",
    },
    {
      "id": "0fXgOOCVoc8nmt4lJH4mO",
      "type": "arrow",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 300,
  "id": Any<String>,
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#66a80f",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "ellipse",
  "updated": 1754039640146,
  "version": 4,
  "versionNonce": Any<Number>,
  "width": 300,
  "x": 630,
  "y": 316,
}
`;

exports[`Test Transform > Test arrow bindings > should bind arrows to existing shapes when start / end provided with ids 2`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "0fXgOOCVoc8nmt4lJH4mO",
      "type": "arrow",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": Any<String>,
  "index": "a1",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#9c36b5",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "diamond",
  "updated": 1754039640146,
  "version": 3,
  "versionNonce": Any<Number>,
  "width": 140,
  "x": 96,
  "y": 400,
}
`;

exports[`Test Transform > Test arrow bindings > should bind arrows to existing shapes when start / end provided with ids 3`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "customData": undefined,
  "elbowed": false,
  "endArrowhead": "arrow",
  "endBinding": {
    "elementId": "ellipse-1",
    "focus": -0.007519379844961235,
    "gap": 11.562288374879595,
  },
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 35,
  "id": Any<String>,
  "index": "a2",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      394,
      34,
    ],
  ],
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "startArrowhead": null,
  "startBinding": {
    "elementId": "b-FhAnZgabioyn6izSAC3",
    "focus": -0.0813953488372095,
    "gap": 1,
  },
  "strokeColor": "#1864ab",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "arrow",
  "updated": 1754039640145,
  "version": 4,
  "versionNonce": Any<Number>,
  "width": 395,
  "x": 247.5,
  "y": 420.5,
}
`;

exports[`Test Transform > Test arrow bindings > should bind arrows to existing shapes when start / end provided with ids 4`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "customData": undefined,
  "elbowed": false,
  "endArrowhead": "arrow",
  "endBinding": {
    "elementId": "ellipse-1",
    "focus": 0.10666666666666667,
    "gap": 3.8343264684446097,
  },
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": Any<String>,
  "index": "a3",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      399,
      0,
    ],
  ],
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "startArrowhead": null,
  "startBinding": {
    "elementId": "diamond-1",
    "focus": 0,
    "gap": 4.535423522449215,
  },
  "strokeColor": "#e67700",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "arrow",
  "updated": 1754039640146,
  "version": 4,
  "versionNonce": Any<Number>,
  "width": 400,
  "x": 227.5,
  "y": 450,
}
`;

exports[`Test Transform > Test arrow bindings > should bind arrows to existing shapes when start / end provided with ids 5`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "z3CgMpo52iGH_Yx1OtKKa",
      "type": "arrow",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 300,
  "id": Any<String>,
  "index": "a4",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1754039640146,
  "version": 3,
  "versionNonce": Any<Number>,
  "width": 300,
  "x": -53,
  "y": 270,
}
`;

exports[`Test Transform > Test arrow bindings > should bind arrows to existing text elements when start / end provided with ids 1`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "zI_WHiHNy3pEb6mx5rQu-",
      "type": "arrow",
    },
  ],
  "containerId": null,
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": Any<String>,
  "index": "a0",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "HEYYYYY",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#c2255c",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "HEYYYYY",
  "textAlign": "left",
  "type": "text",
  "updated": 1754039640147,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "top",
  "width": 7,
  "x": 248,
  "y": 226.5,
}
`;

exports[`Test Transform > Test arrow bindings > should bind arrows to existing text elements when start / end provided with ids 2`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "zI_WHiHNy3pEb6mx5rQu-",
      "type": "arrow",
    },
  ],
  "containerId": null,
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": Any<String>,
  "index": "a1",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "Whats up ?",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "Whats up ?",
  "textAlign": "left",
  "type": "text",
  "updated": 1754039640148,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "top",
  "width": 10,
  "x": 560,
  "y": 226.5,
}
`;

exports[`Test Transform > Test arrow bindings > should bind arrows to existing text elements when start / end provided with ids 3`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "Bkifxkqdpk9vfo5Z27vQa",
      "type": "text",
    },
  ],
  "customData": undefined,
  "elbowed": false,
  "endArrowhead": "arrow",
  "endBinding": {
    "elementId": "text-2",
    "focus": 0,
    "gap": 16,
  },
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": Any<String>,
  "index": "a2",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      99,
      0,
    ],
  ],
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "startArrowhead": null,
  "startBinding": {
    "elementId": "text-1",
    "focus": 0,
    "gap": 1,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "arrow",
  "updated": 1754039640148,
  "version": 4,
  "versionNonce": Any<Number>,
  "width": 100,
  "x": 255.5,
  "y": 239,
}
`;

exports[`Test Transform > Test arrow bindings > should bind arrows to existing text elements when start / end provided with ids 4`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "zI_WHiHNy3pEb6mx5rQu-",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": Any<String>,
  "index": "a3",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "HELLO WORLD!!",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "HELLO WORLD!!",
  "textAlign": "center",
  "type": "text",
  "updated": 1754039640148,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "middle",
  "width": 13,
  "x": 298.5,
  "y": 226.5,
}
`;

exports[`Test Transform > should not allow duplicate ids 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 200,
  "id": "rect-1",
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1754039640150,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 100,
  "x": 300,
  "y": 100,
}
`;

exports[`Test Transform > should transform linear elements 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "customData": undefined,
  "elbowed": false,
  "endArrowhead": "arrow",
  "endBinding": null,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": Any<String>,
  "index": "a0",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      99,
      0,
    ],
  ],
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "startArrowhead": null,
  "startBinding": null,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "arrow",
  "updated": 1754039640127,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 100,
  "x": 100.5,
  "y": 20,
}
`;

exports[`Test Transform > should transform linear elements 2`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "customData": undefined,
  "elbowed": false,
  "endArrowhead": "triangle",
  "endBinding": null,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": Any<String>,
  "index": "a1",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      99,
      0,
    ],
  ],
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "startArrowhead": "dot",
  "startBinding": null,
  "strokeColor": "#1971c2",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "arrow",
  "updated": 1754039640127,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 100,
  "x": 450.5,
  "y": 20,
}
`;

exports[`Test Transform > should transform linear elements 3`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "customData": undefined,
  "endArrowhead": null,
  "endBinding": null,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": Any<String>,
  "index": "a2",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      100,
      0,
    ],
  ],
  "polygon": false,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "startArrowhead": null,
  "startBinding": null,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "line",
  "updated": 1754039640127,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 100,
  "x": 100,
  "y": 60,
}
`;

exports[`Test Transform > should transform linear elements 4`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "customData": undefined,
  "endArrowhead": null,
  "endBinding": null,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": Any<String>,
  "index": "a3",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      100,
      0,
    ],
  ],
  "polygon": false,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "startArrowhead": null,
  "startBinding": null,
  "strokeColor": "#2f9e44",
  "strokeStyle": "dotted",
  "strokeWidth": 2,
  "type": "line",
  "updated": 1754039640127,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 100,
  "x": 450,
  "y": 60,
}
`;

exports[`Test Transform > should transform regular shapes 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": Any<String>,
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1754039640118,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 100,
  "x": 100,
  "y": 100,
}
`;

exports[`Test Transform > should transform regular shapes 2`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": Any<String>,
  "index": "a1",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "ellipse",
  "updated": 1754039640118,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 100,
  "x": 100,
  "y": 250,
}
`;

exports[`Test Transform > should transform regular shapes 3`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": Any<String>,
  "index": "a2",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "diamond",
  "updated": 1754039640118,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 100,
  "x": 100,
  "y": 400,
}
`;

exports[`Test Transform > should transform regular shapes 4`] = `
{
  "angle": 0,
  "backgroundColor": "#c0eb75",
  "boundElements": null,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": Any<String>,
  "index": "a3",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1754039640118,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 200,
  "x": 300,
  "y": 100,
}
`;

exports[`Test Transform > should transform regular shapes 5`] = `
{
  "angle": 0,
  "backgroundColor": "#ffc9c9",
  "boundElements": null,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": Any<String>,
  "index": "a4",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "dotted",
  "strokeWidth": 2,
  "type": "ellipse",
  "updated": 1754039640118,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 200,
  "x": 300,
  "y": 250,
}
`;

exports[`Test Transform > should transform regular shapes 6`] = `
{
  "angle": 0,
  "backgroundColor": "#a5d8ff",
  "boundElements": null,
  "customData": undefined,
  "fillStyle": "cross-hatch",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": Any<String>,
  "index": "a5",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1971c2",
  "strokeStyle": "dashed",
  "strokeWidth": 2,
  "type": "diamond",
  "updated": 1754039640118,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 200,
  "x": 300,
  "y": 400,
}
`;

exports[`Test Transform > should transform text element 1`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": null,
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": Any<String>,
  "index": "a0",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "HELLO WORLD!",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "HELLO WORLD!",
  "textAlign": "left",
  "type": "text",
  "updated": 1754039640126,
  "version": 2,
  "versionNonce": Any<Number>,
  "verticalAlign": "top",
  "width": 12,
  "x": 100,
  "y": 100,
}
`;

exports[`Test Transform > should transform text element 2`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": null,
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": Any<String>,
  "index": "a1",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "STYLED HELLO WORLD!",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#5f3dc4",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "STYLED HELLO WORLD!",
  "textAlign": "left",
  "type": "text",
  "updated": 1754039640126,
  "version": 2,
  "versionNonce": Any<Number>,
  "verticalAlign": "top",
  "width": 19,
  "x": 100,
  "y": 150,
}
`;

exports[`Test Transform > should transform the elements correctly when linear elements have single point 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "Dr2boEnlbuawoLpNHEyvw",
      "type": "text",
    },
    {
      "id": "Bob_B",
      "type": "arrow",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [
    "subgraph_group_B",
  ],
  "height": 163,
  "id": Any<String>,
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1754039640153,
  "version": 3,
  "versionNonce": Any<Number>,
  "width": 166.03125,
  "x": 0,
  "y": 0,
}
`;

exports[`Test Transform > should transform the elements correctly when linear elements have single point 2`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "RANrWabZx3lNBuNLw2to5",
      "type": "text",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [
    "subgraph_group_A",
  ],
  "height": 114,
  "id": Any<String>,
  "index": "a1",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1754039640151,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 120.265625,
  "x": 364.546875,
  "y": 0,
}
`;

exports[`Test Transform > should transform the elements correctly when linear elements have single point 3`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "WNqaYyy-Ha4sbwjX90Q68",
      "type": "text",
    },
    {
      "id": "Bob_Alice",
      "type": "arrow",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [
    "subgraph_group_A",
  ],
  "height": 44,
  "id": Any<String>,
  "index": "a2",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1754039640153,
  "version": 3,
  "versionNonce": Any<Number>,
  "width": 70.265625,
  "x": 389.546875,
  "y": 35,
}
`;

exports[`Test Transform > should transform the elements correctly when linear elements have single point 4`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "wsTPzhjqfm65WeWTkvldH",
      "type": "text",
    },
    {
      "id": "Bob_Alice",
      "type": "arrow",
    },
    {
      "id": "Bob_B",
      "type": "arrow",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [
    "subgraph_group_B",
  ],
  "height": 44,
  "id": Any<String>,
  "index": "a3",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1754039640153,
  "version": 4,
  "versionNonce": Any<Number>,
  "width": 56.4921875,
  "x": 54.76953125,
  "y": 35,
}
`;

exports[`Test Transform > should transform the elements correctly when linear elements have single point 5`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "BM10AcJOQTSQbzLuy1MCz",
      "type": "text",
    },
  ],
  "customData": undefined,
  "elbowed": false,
  "endArrowhead": "arrow",
  "endBinding": {
    "elementId": "Alice",
    "focus": -0,
    "gap": 5.299874999999986,
  },
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": Any<String>,
  "index": "a4",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      271.985,
      0,
    ],
  ],
  "roughness": 1,
  "roundness": {
    "type": 2,
  },
  "seed": Any<Number>,
  "startArrowhead": null,
  "startBinding": {
    "elementId": "Bob",
    "focus": 0,
    "gap": 1,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "arrow",
  "updated": 1754039640153,
  "version": 4,
  "versionNonce": Any<Number>,
  "width": 272.985,
  "x": 111.762,
  "y": 57,
}
`;

exports[`Test Transform > should transform the elements correctly when linear elements have single point 6`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "4GxjpYcAwaglyx2FuSb2Y",
      "type": "text",
    },
  ],
  "customData": undefined,
  "elbowed": false,
  "endArrowhead": "arrow",
  "endBinding": {
    "elementId": "B",
    "focus": 0,
    "gap": 32,
  },
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": Any<String>,
  "index": "a5",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
  ],
  "roughness": 1,
  "roundness": {
    "type": 2,
  },
  "seed": Any<Number>,
  "startArrowhead": null,
  "startBinding": {
    "elementId": "Bob",
    "focus": 0,
    "gap": 1,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "arrow",
  "updated": 1754039640153,
  "version": 4,
  "versionNonce": Any<Number>,
  "width": 0,
  "x": 77.017,
  "y": 79,
}
`;

exports[`Test Transform > should transform the elements correctly when linear elements have single point 7`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "B",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [
    "subgraph_group_B",
  ],
  "height": 25,
  "id": Any<String>,
  "index": "a6",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "B",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "B",
  "textAlign": "center",
  "type": "text",
  "updated": 1754039640153,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "top",
  "width": 1,
  "x": 82.515625,
  "y": 5,
}
`;

exports[`Test Transform > should transform the elements correctly when linear elements have single point 8`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "A",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [
    "subgraph_group_A",
  ],
  "height": 25,
  "id": Any<String>,
  "index": "a7",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "A",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "A",
  "textAlign": "center",
  "type": "text",
  "updated": 1754039640153,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "top",
  "width": 1,
  "x": 424.1796875,
  "y": 5,
}
`;

exports[`Test Transform > should transform the elements correctly when linear elements have single point 9`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "Alice",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [
    "subgraph_group_A",
  ],
  "height": 25,
  "id": Any<String>,
  "index": "a8",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "Alice",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "Alice",
  "textAlign": "center",
  "type": "text",
  "updated": 1754039640153,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "middle",
  "width": 5,
  "x": 422.1796875,
  "y": 44.5,
}
`;

exports[`Test Transform > should transform the elements correctly when linear elements have single point 10`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "Bob",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [
    "subgraph_group_B",
  ],
  "height": 25,
  "id": Any<String>,
  "index": "a9",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "Bob",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "Bob",
  "textAlign": "center",
  "type": "text",
  "updated": 1754039640153,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "middle",
  "width": 3,
  "x": 81.515625,
  "y": 44.5,
}
`;

exports[`Test Transform > should transform the elements correctly when linear elements have single point 11`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "Bob_Alice",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": Any<String>,
  "index": "aA",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "How are you?",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "How are you?",
  "textAlign": "center",
  "type": "text",
  "updated": 1754039640153,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "middle",
  "width": 12,
  "x": 241.75450000000004,
  "y": 44.5,
}
`;

exports[`Test Transform > should transform the elements correctly when linear elements have single point 12`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "Bob_B",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": Any<String>,
  "index": "aB",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "Friendship",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "Friendship",
  "textAlign": "center",
  "type": "text",
  "updated": 1754039640153,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "middle",
  "width": 10,
  "x": 72.017,
  "y": 66.5,
}
`;

exports[`Test Transform > should transform to labelled arrows when label provided for arrows 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "THUN25ZSepkMY9mSqXikb",
      "type": "text",
    },
  ],
  "customData": undefined,
  "elbowed": false,
  "endArrowhead": "arrow",
  "endBinding": null,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": Any<String>,
  "index": "a0",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      99,
      0,
    ],
  ],
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "startArrowhead": null,
  "startBinding": null,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "arrow",
  "updated": 1754039640132,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 100,
  "x": 100.5,
  "y": 100,
}
`;

exports[`Test Transform > should transform to labelled arrows when label provided for arrows 2`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "tUZMRTUogK1igNUQj51dj",
      "type": "text",
    },
  ],
  "customData": undefined,
  "elbowed": false,
  "endArrowhead": "arrow",
  "endBinding": null,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": Any<String>,
  "index": "a1",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      99,
      0,
    ],
  ],
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "startArrowhead": null,
  "startBinding": null,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "arrow",
  "updated": 1754039640132,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 100,
  "x": 100.5,
  "y": 200,
}
`;

exports[`Test Transform > should transform to labelled arrows when label provided for arrows 3`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "sFc5sDC9rI9HKiNMDY7dV",
      "type": "text",
    },
  ],
  "customData": undefined,
  "elbowed": false,
  "endArrowhead": "arrow",
  "endBinding": null,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": Any<String>,
  "index": "a2",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      99,
      0,
    ],
  ],
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "startArrowhead": null,
  "startBinding": null,
  "strokeColor": "#1098ad",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "arrow",
  "updated": 1754039640132,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 100,
  "x": 100.5,
  "y": 300,
}
`;

exports[`Test Transform > should transform to labelled arrows when label provided for arrows 4`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "UyxEIE6IuETOPUo6RjgaP",
      "type": "text",
    },
  ],
  "customData": undefined,
  "elbowed": false,
  "endArrowhead": "arrow",
  "endBinding": null,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": Any<String>,
  "index": "a3",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      99,
      0,
    ],
  ],
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "startArrowhead": null,
  "startBinding": null,
  "strokeColor": "#1098ad",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "arrow",
  "updated": 1754039640132,
  "version": 2,
  "versionNonce": Any<Number>,
  "width": 100,
  "x": 100.5,
  "y": 400,
}
`;

exports[`Test Transform > should transform to labelled arrows when label provided for arrows 5`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "IptFJcR7OmRQ0U96Ic14N",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": Any<String>,
  "index": "a4",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "LABELED ARROW",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "LABELED ARROW",
  "textAlign": "center",
  "type": "text",
  "updated": 1754039640134,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "middle",
  "width": 13,
  "x": 143.5,
  "y": 87.5,
}
`;

exports[`Test Transform > should transform to labelled arrows when label provided for arrows 6`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "aIpjWEH_-PEjLIm8Ou7xj",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": Any<String>,
  "index": "a5",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "STYLED LABELED ARROW",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#099268",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "STYLED LABELED ARROW",
  "textAlign": "center",
  "type": "text",
  "updated": 1754039640134,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "middle",
  "width": 20,
  "x": 140,
  "y": 187.5,
}
`;

exports[`Test Transform > should transform to labelled arrows when label provided for arrows 7`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "1UzqSwUSoQTT8TDhnOQa1",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": Any<String>,
  "index": "a6",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "ANOTHER STYLED LABELLED ARROW",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1098ad",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "ANOTHER STYLED LABELLED ARROW",
  "textAlign": "center",
  "type": "text",
  "updated": 1754039640134,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "middle",
  "width": 29,
  "x": 135.5,
  "y": 287.5,
}
`;

exports[`Test Transform > should transform to labelled arrows when label provided for arrows 8`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "bA3T5h43YX4m-3rlyQpDS",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": Any<String>,
  "index": "a7",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "ANOTHER STYLED LABELLED ARROW",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#099268",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "ANOTHER STYLED LABELLED ARROW",
  "textAlign": "center",
  "type": "text",
  "updated": 1754039640134,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "middle",
  "width": 29,
  "x": 135.5,
  "y": 387.5,
}
`;

exports[`Test Transform > should transform to text containers when label provided 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "8NEjPOnugULzbr3ZMCz7z",
      "type": "text",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 35,
  "id": Any<String>,
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1754039640130,
  "version": 4,
  "versionNonce": Any<Number>,
  "width": 34,
  "x": 100,
  "y": 100,
}
`;

exports[`Test Transform > should transform to text containers when label provided 2`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "ShDTjyhbshziMxQ8oeI0F",
      "type": "text",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 49,
  "id": Any<String>,
  "index": "a1",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "ellipse",
  "updated": 1754039640130,
  "version": 3,
  "versionNonce": Any<Number>,
  "width": 200,
  "x": 500,
  "y": 100,
}
`;

exports[`Test Transform > should transform to text containers when label provided 3`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "oRrk6pCC-sCH3yVwiqgnO",
      "type": "text",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 120,
  "id": Any<String>,
  "index": "a2",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "diamond",
  "updated": 1754039640130,
  "version": 3,
  "versionNonce": Any<Number>,
  "width": 280,
  "x": 100,
  "y": 150,
}
`;

exports[`Test Transform > should transform to text containers when label provided 4`] = `
{
  "angle": 0,
  "backgroundColor": "#fff3bf",
  "boundElements": [
    {
      "id": "9GZ495L4-C1urESWwdqdX",
      "type": "text",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 70,
  "id": Any<String>,
  "index": "a3",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "diamond",
  "updated": 1754039640130,
  "version": 3,
  "versionNonce": Any<Number>,
  "width": 300,
  "x": 100,
  "y": 400,
}
`;

exports[`Test Transform > should transform to text containers when label provided 5`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "OR_8NSlBSJcGSmmSfblnu",
      "type": "text",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 35,
  "id": Any<String>,
  "index": "a4",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#c2255c",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1754039640130,
  "version": 3,
  "versionNonce": Any<Number>,
  "width": 200,
  "x": 500,
  "y": 300,
}
`;

exports[`Test Transform > should transform to text containers when label provided 6`] = `
{
  "angle": 0,
  "backgroundColor": "#ffec99",
  "boundElements": [
    {
      "id": "F54mq9KQPYc9foztAM9cn",
      "type": "text",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 49,
  "id": Any<String>,
  "index": "a5",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#f08c00",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "ellipse",
  "updated": 1754039640131,
  "version": 3,
  "versionNonce": Any<Number>,
  "width": 200,
  "x": 500,
  "y": 500,
}
`;

exports[`Test Transform > should transform to text containers when label provided 7`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "SzjvDO0gxMvB1syqsKpf6",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": Any<String>,
  "index": "a6",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "RECTANGLE TEXT CONTAINER",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "RECTANGLE TEXT CONTAINER",
  "textAlign": "center",
  "type": "text",
  "updated": 1754039640131,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "middle",
  "width": 24,
  "x": 105,
  "y": 105,
}
`;

exports[`Test Transform > should transform to text containers when label provided 8`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "PQkzoK72USCTaQE3J6CGE",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": Any<String>,
  "index": "a7",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "ELLIPSE TEXT CONTAINER",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "ELLIPSE TEXT CONTAINER",
  "textAlign": "center",
  "type": "text",
  "updated": 1754039640131,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "middle",
  "width": 22,
  "x": 588.7893218813452,
  "y": 112.17588386092959,
}
`;

exports[`Test Transform > should transform to text containers when label provided 9`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "N9mffGyqpCpdQAcxQfVLO",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 50,
  "id": Any<String>,
  "index": "a8",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "DIAMOND
TEXT CONTAINER",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "DIAMOND
TEXT CONTAINER",
  "textAlign": "center",
  "type": "text",
  "updated": 1754039640131,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "middle",
  "width": 14,
  "x": 233,
  "y": 185,
}
`;

exports[`Test Transform > should transform to text containers when label provided 10`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "xnIooMwNyyXazj8ueEzBw",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": Any<String>,
  "index": "a9",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "STYLED DIAMOND TEXT CONTAINER",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#099268",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "STYLED DIAMOND TEXT CONTAINER",
  "textAlign": "center",
  "type": "text",
  "updated": 1754039640131,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "middle",
  "width": 29,
  "x": 235.5,
  "y": 422.5,
}
`;

exports[`Test Transform > should transform to text containers when label provided 11`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "wsUJ9X72ZXjKuIcVyKF4p",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": Any<String>,
  "index": "aA",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "TOP LEFT ALIGNED RECTANGLE TEXT CONTAINER",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#c2255c",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "TOP LEFT ALIGNED RECTANGLE TEXT CONTAINER",
  "textAlign": "left",
  "type": "text",
  "updated": 1754039640131,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "top",
  "width": 41,
  "x": 505,
  "y": 305,
}
`;

exports[`Test Transform > should transform to text containers when label provided 12`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "CuodXl6QdC2ryxOoaqaBq",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 5,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": Any<String>,
  "index": "aB",
  "isDeleted": false,
  "lineHeight": 1.25,
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "STYLED ELLIPSE TEXT CONTAINER",
  "roughness": 1,
  "roundness": null,
  "seed": Any<Number>,
  "strokeColor": "#c2255c",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "STYLED ELLIPSE TEXT CONTAINER",
  "textAlign": "center",
  "type": "text",
  "updated": 1754039640131,
  "version": 3,
  "versionNonce": Any<Number>,
  "verticalAlign": "middle",
  "width": 29,
  "x": 585.2893218813452,
  "y": 512.1758838609296,
}
`;
